discussion/kv_engine/145185/145185_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-42224: Fail the node if persistence repeatedly fails header's sync

At http://review.couchbase.org/c/couchstore/+/145098 we allow couchstore
to auto-retry header's persistence if it fails at fsync.

This patch triggers auto-retry in EPBucket::flushVBucket path. Also, EP
increments ep_data_write_failed at each failure, which triggers
ns_server's auto-failover if the user has enabled it.

Change-Id: I4554801cff956f5cc32392705ba51cbc881581a8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-02-15 10:38:16.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-15 10:47:22.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33605/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33605/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28901/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28901/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:121:34:
error: out-of-line definition of "setVBucketState" does not match any declaration in "SingleThreadedKVBucketTest"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28901/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8836/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8836/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8697/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7105/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:121:34: error: out-of-line definition of "setVBucketState" does not match any declaration in "SingleThreadedKVBucketTest" [clang-diagnostic-error]
void SingleThreadedKVBucketTest::setVBucketState(Vbid vbid,
                                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7105/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:121:34:
error: out-of-line definition of "setVBucketState" does not match any declaration in "SingleThreadedKVBucketTest" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7105/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7751/ : FAILURE

Compile error at [2021-02-15T10:40:19.687Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:121:34:
error: out-of-line definition of "setVBucketState" does not match any declaration in "SingleThreadedKVBucketTest"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7751/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9043/ : FAILURE

Compile error at [2021-02-15T10:39:11.718Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:121:34:
error: out-of-line definition of "setVBucketState" does not match any declaration in "SingleThreadedKVBucketTest"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9043/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16595/ : FAILURE

Compile error at [2021-02-15T10:40:36.586Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:121:34:
error: out-of-line definition of "setVBucketState" does not match any declaration in "SingleThreadedKVBucketTest"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16595/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5642/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
